# TravisCITest

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  palindrome.cpp  palindrome_stl.cpp
